# tandem-aio

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  README.md  install.bat  install.sh  lines-of-code.txt  package-lock.json  requirements.txt  rsa_auth.py  scratch.py  start.sh
.agents/: AGENTS.md
.github/: CODEOWNERS
.github/workflows/: release.yml
.zed/: settings.json
Python/: TODO.txt  tandem.py  test.py
cli/: .gitignore  README.md  analysis.py  app_config.py  auth.py  build.py  cli.py  commands.py  discovery.py  example.toml  main.py  manifest.py  node_paths.py  node_service.py  package-lock.json  package.json  pyproject.toml  remote.py  requirements.txt  sdk_commands.py  sdk_registry.py  test.toml  test_server.py  tsconfig.json  uninstall.py  wasm.py
cli/_bundled/sdk/python_sdk/: __init__.py
cli/_bundled/sdk/python_sdk/tandem/: __init__.py  compute.py  discovery.py  future.py  immutable.py  rpc.py  split.py
cli/_bundled/wit/: task.wit
cli/examples/: sample_tasks.py
cli/packaging/: build-binary.sh
cli/pickles/prime-demo/: prime_chunk_1.pkl  prime_chunk_10.pkl  prime_chunk_2.pkl  prime_chunk_3.pkl  prime_chunk_4.pkl  prime_chunk_5.pkl  prime_chunk_6.pkl  prime_chunk_7.pkl  prime_chunk_8.pkl  prime_chunk_9.pkl
cli/pickles/test/: prime_chunk_1.pkl  prime_chunk_10.pkl  prime_chunk_2.pkl  prime_chunk_3.pkl  prime_chunk_4.pkl  prime_chunk_5.pkl  prime_chunk_6.pkl  prime_chunk_7.pkl  prime_chunk_8.pkl  prime_chunk_9.pkl
cli/src/: index.ts
cli/src/backends/: python.ts
cli/src/commands/: build.ts  upload.ts
cli/src/core/: package.ts  scanner.ts  upload.ts  validate.ts
cli/src/types/: manifest.ts
cli/tandem_cli/: __init__.py  __main__.py  analysis.py  app_config.py  auth.py  build.py  commands.py  discovery.py  dummy.wasm  manifest.py  remote.py  sdk_registry.py  wasm.py
cli/tandem_cli/_bundled/sdk/: __init__.py
cli/tandem_cli/_bundled/sdk/python/: __init__.py
cli/tandem_cli/_bundled/sdk/python/tandem/: __init__.py
cli/temp_pid/: prime-demo.pid  test.pid  testapp
cli/tests/: test_auth_command.py  test_error_messages.py  test_node_service.py  test_sdk_bundle.py  test_sdk_bundle_sync.py  test_sdk_commands.py  test_settings_command.py  test_uninstall.py  test_usage_command.py  test_wasm.py
cli/toml/: Tandem.toml  goyslop.toml  testapp2.toml
cli/ts_slop/: main.py  pyproject.toml
cli/ts_slop/src/backends/: registry.ts  stubs.ts  types.ts
cli/ts_slop/src/core/: config.ts
cli/ts_slop/tandem_cli/: build.py  commands.py  discovery.py  remote.py
cli/ts_slop/tandem_cli/_bundled/: __init__.py
cli/ts_slop/tests/: python-backend.test.ts  scanner.test.ts  test_init_command.py
cryptography/: key_manager.py
docker/: Dockerfile.driver  Dockerfile.node  Dockerfile.server  build.sh  docker-compose.yml  e2e.sh  failover-test.sh
docker/sample/: app.py  tandem.toml
docker/sample-serve/: app.py  tandem.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  execution-setup.md  postgresql-setup.md
flask_app/: app.py  requirements.txt
frontend/: node-install.msi
frontend/public/: index.html
frontend/src/: index.js
node/: Cargo.toml  node_id.txt  node_identity.json  node_key.pem
node/packaging/: README.md  build-deb.sh  build-dmg.sh
node/src/: client.rs  config.rs  crypto.rs  executor.rs  health.rs  main.rs  measure.rs  registration.rs  run.rs  sandbox.rs  serve.rs  state.rs  tasks.rs  worker.rs
node/src/network/: connection.rs
node/tests/fixtures/: README.md  echo_component.wasm  echo_module.wasm  task_run_component.wasm
node_retired/src/: main.rs
node_retired/src/run/: run_py.rs
nodes/: Cargo.toml
nodes/src/: README.md  client.rs  main.rs  network.rs  serialize.rs
nodes/src/network/: connection.rs  packets.rs
other/cryptography/: requirements.txt
packaging/: README.md  build-deb.sh  build-dmg.sh
person-a/: go.mod  main.go
person-b/: cli.py  example.toml
person-b/toml/: Tandem.toml  testapp.toml
react_website/: package-lock.json  package.json
react_website/public/: index.html
react_website/src/: index.js
rsa encryption/: rsa_auth.py
rust_wasm_math/: Cargo.toml
sdk/: Cargo.toml  main.py  sdk.toxt  tandem-sdk-plan.md
sdk/convert/: Cargo.toml
sdk/core/: Cargo.toml
sdk/core/src/: artifact.rs  cache.rs  compile.rs  lib.rs  validate.rs
sdk/python-sdk/: GUIDE.md  README.md  pyproject.toml
sdk/python-sdk/examples/: .gitignore  README.md  compute_example.py  flask_app.py  tandem.toml  web.toml  web_example.py
sdk/python-sdk/tandem/: __init__.py  builder.py  compute.py  errors.py  executor.py  immutable.py  rpc.py  split.py  validator.py
sdk/python-sdk/tandem_sdk.egg-info/: PKG-INFO  SOURCES.txt
sdk/python-sdk/tests/: test_sdk.py  test_tandem.py
sdk/wit/: main.wit  task.wit
sdk/wrappers/python/: Cargo.toml  pyproject.toml
sdk/wrappers/python/src/: lib.rs
sdk/wrappers/python/tandem/: __init__.py
server/: db_mgmt.whiteboard  dev.db  postgresql.md  routes.excalidraw  run.py
server/app/: __init__.py  extensions.py  models.py
server/app/blueprints/: BLUEPRINTS.MD  api.py  auth.py  deploy.py  desktop.py  index.py  new.py  nodes.py  serve.py  start.py  stop.py  usage.py
server/app/utils/: api.py  auth.py  quota.py  receipts.py  serve_queue.py  sweeper.py  task_queue.py  toml_reader.py  usage.py  verify.py  zkp.py
server/scripts/: db_test.py  demo_deploy.py  demo_start.py  purge_orphans.py
server/tests/: test_api_key_rotation.py  test_deployment_access.py  test_desktop_sdks.py  test_node_registration.py  test_result_verification.py  test_sweeper.py  test_task_encryption_failover.py  test_task_queue.py  test_usage.py
tandem-client/: Cargo.toml
tandem-client/src/: client.rs  main.rs  network.rs  run.rs  serialization.rs
tandem_test/: tandem.toml
test/: requirements.txt  test.py  test.wasm  test.wat
test/rsa/: rsa.py
test/run/: tandem.toml  test.py
test/server/: cli.py  node.py
test_snapshot/: app.py  tandem.toml
website_template/: .gitignore  package-lock.json
website_template/app/: globals.css  page.jsx
website_template/lib/: data.js
(+14 files in other folders)
