[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", features = ["json", "stream"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util"] }

futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.32"
base64 = "0.22"
wasmtime = "27.0.0"
