[package]
name = "node"
version = "0.1.0"
edition = "2024"

# The compiled worker is called `tandem-node` so it reads clearly on PATH and in
# service files, even though the crate itself is still named `node`.
[[bin]]
name = "tandem-node"
path = "src/main.rs"

[dependencies]
wasmtime = "31"
wasmtime-wasi = "31"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsa = { version = "0.9", features = ["pem", "sha2", "getrandom"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
dotenvy = "0.15"
rand = "0.8"