[package]
name = "tandem-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.3" # TODO: Update to 0.39.3
pyo3 = {version = "0.28.3", features = ["auto-initialize"]}
bytes = "1.11.1"