[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tandem-sdk"
version = "0.1.0"
description = "The Tandem Python SDK provides marker decorators and helper types for defining Tandem-discoverable tasks in Python."
requires-python = ">=3.9"
authors = [{ name = "Tandem" }]
dependencies = []

[tool.setuptools.packages.find]
include = ["tandem*"]
