[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tandem-sdk"
version = "0.1.0"
description = "The Tandem Python SDK provides marker decorators and helper types for defining Tandem-discoverable tasks in Python."
requires-python = ">=3.9"
authors = [{ name = "Tandem" }]
dependencies = [
    "requests>=2.0",
    "python-dotenv>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["tandem*"]
